# ImageThumbnailExtension

./: .gitmodules  CMakeLists.txt  classfactory.cpp  classfactory.h  common.h  dllmain.cpp  installer.nsi  main.cpp  registryhelpers.cpp  registryhelpers.h  thumbnailprovider.cpp  thumbnailprovider.def  thumbnailprovider.h  version.h  version.rc
